--- a/DAACOORDINATORAPP/frontend/src/ProductList.css
+++ b/DAACOORDINATORAPP/frontend/src/ProductList.css
@@ -3,7 +3,7 @@
   display: flex;
   flex: 1;
   flex-grow: 1;
-  min-height: 80vh;
+  min-height: calc(100vh - 60px);
   justify-content: space-around;
   align-items: flex-start;
   padding: 20px;
